[workspace]
members = [
    "explore",
    "networking",
    "voxel_terrain",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.17"
avian3d = "0.4"
voxel_terrain = { path = "voxel_terrain" }
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[profile.dev]
opt-level = 1

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
