[workspace]
members = [
    "character_controller",
    "console",
    "explore",
    "networking",
    "voxel_terrain",
    "weave",
]
resolver = "3"

[workspace.dependencies]
weave = { path = "weave" }
bevy_hui = "0.5"
leafwing-input-manager = "0.19"
noiz = "0.3"
serde = "1.0"

[workspace.dependencies.avian3d]
version = "0.4"
features = [
    "serialize",
    "simd",
]

[workspace.dependencies.bevy]
version = "0.17"
features = [
    "file_watcher",
    "multi_threaded",
    "bevy_remote",
]

[workspace.dependencies.character_controller]
path = "character_controller"

[workspace.dependencies.console]
path = "console"

[workspace.dependencies.lightyear]
version = "0.25"
features = [
    "server",
    "client",
    "interpolation",
    "prediction",
    "replication",
    "webtransport",
    "webtransport_self_signed",
    "webtransport_dangerous_configuration",
    "websocket",
    "websocket_self_signed",
    "udp",
    "netcode",
]

[workspace.dependencies.log]
version = "0.4"
features = [
    "max_level_debug",
    "release_max_level_warn",
]

[workspace.dependencies.networking]
path = "networking"

[workspace.dependencies.tracing]
version = "0.1"
features = [
    "max_level_debug",
    "release_max_level_warn",
]

[workspace.dependencies.voxel_terrain]
path = "voxel_terrain"

[profile.dev]
opt-level = 1

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
