[package]
name = "explore"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["bevy_remote"] }
bevy_flycam = "0.17"
bevy-inspector-egui = "0.35"
avian3d = { workspace = true }
noiz = "0.3"
log = { workspace = true }
tracing = { workspace = true }
voxel_terrain = { workspace = true }


# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"
